# fullStar

./: .env.example  .gitignore  README.en.md  README.ja.md  README.md  mob
docs/: DEPENDENCIES.md  FEATURES.md  GIT.md  INSTALL.md  ITERM_MULTI_TAB.md  NAMING.md  README.md  SKILL_COMPOSE.md  TASKS.md  TELEGRAM_SETUP.md  TG_ITERM_AI_FLOW.en.html  TG_ITERM_AI_FLOW.html  TG_ITERM_AI_FLOW.ja.html
droid-ctl/: .gitignore  README.md  pyproject.toml
droid-ctl-skill/: .env.example  .gitignore  README.md  SKILL.md  examples.md  reference.md
droid-ctl/droid_ctl/: __init__.py  cli.py
droid-ctl/droid_ctl/core/: __init__.py  adb_path.py  device.py  exceptions.py  runner.py  tools.py
droid-ctl/droid_ctl/ops/: __init__.py  device.py
droid-ctl/scripts/: setup.sh  vendor-platform-tools.sh
droid-ctl/tests/: test_adb_path.py  test_device.py  test_tools.py  test_unlock.py
iphone-ctl/: .gitignore  README.md  pyproject.toml
iphone-ctl-skill/: README.md  SKILL.md  reference.md
iphone-ctl/iphone_ctl/: __init__.py  cli.py
iphone-ctl/iphone_ctl/core/: exceptions.py  idevice.py  tools.py  wda.py
iphone-ctl/iphone_ctl/ops/: device.py
iphone-ctl/scripts/: setup.sh
iphone-ctl/tests/: test_wda.py
lockmac/: README.md  pyproject.toml
lockmac/docs/: FLEET_DESIGN.md  PHASE1.md  PHASE2.md
lockmac/lockmac/: __init__.py  cli.py  core.py  overlay.swift  tg.py
lockmac/packaging/: publish-tap.sh
lockmac/tests/: test_core.py  test_heartbeat.py  test_tg.py
mob-compose/: .gitignore  README.md  compose  devkit.env.example
mob-remote-skill/: SKILL.ja.md  SKILL.md  SKILL.zh-CN.md
scripts/: README.md  install-skill.sh  migrate-names.py  verify-no-secrets.sh
term-bridge/: iterm-buffer-setup.py  iterm-capture.py  iterm-inject.py  iterm-list.py  iterm-monitor.py  iterm-screenshot.py  iterm_extract.py  iterm_log_buffer.py  iterm_route.py  iterm_shot.py  iterm_tabs.py  iterm_target.py  pipeline_doctor.py  reply_dedup.py  screenshot_dedup.py  target_default.py  term_backend.py  terminal-inject.py  terminal-screenshot.py  terminal_capture_lib.py  terminal_inject_lib.py  terminal_spawn_lib.py  terminal_tabs.py  test_iterm_dedup.py  test_iterm_route_match.py  (+21 more)
tg-notify/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
tg-notify/scripts/: setup.sh
tg-notify/tests/: test_app_screenshot.py  test_config.py  test_screenshot.py
tg-notify/tg_notify/: __init__.py  cli.py
tg-notify/tg_notify/core/: __init__.py  client.py  config.py  exceptions.py  screenshot.py  types.py
tg-notify/tg_notify/notify/: __init__.py  sender.py
(+67 files in other folders)
