[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iphone-ctl"
version = "0.2.0"
description = "iPhone device control: screenshots + WDA tap/swipe"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
iphone-ctl = "iphone_ctl.cli:main"
ioskit = "iphone_ctl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["iphone_ctl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
