[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lockmac"
version = "0.1.0"
description = "Privacy veil for macOS: black out the screen (not a lock), with local-password / timeout dismissal and login autostart"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
lockmac = "lockmac.cli:main"
veilkit = "lockmac.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lockmac*"]

[tool.setuptools.package-data]
lockmac = ["overlay.swift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
