[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-notify"
version = "0.2.0"
description = "Telegram outbound notify: text, files, photos, macOS screenshots"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "python-telegram-bot>=12.8",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]

[project.scripts]
tg-notify = "tg_notify.cli:main"
tgkit = "tg_notify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tg_notify*"]
